1.6.1: Dashboard, bug fixes
